# TourmaWorld

./: .ccls  .gitignore  CMakeLists.txt  Cargo.toml  README.md  README.org
assets/: char_v1.pixil
assets/textures/: World.tsx  peter-20220517-220641.piskel  peter-20220518-144849.piskel
include/: Entity.hpp  Game.h  Game.hpp  Math.hpp  RenderWindow.hpp  Utils.hpp  defines.h  main.h  player.h
lib/SDL2/: SDL_config.h  libSDL2.dylib  libSDL2.la  libSDL2_image-2.0.0.dylib
res/textures/: dirt.pxon  peter-20220516-105625.piskel  peter.pxon  sheep.pxon
resources/textures/: grass.pxon
src/: Game.cpp  core.rs  entity.cpp  game.cpp  lib.rs  main.cpp  main.rs  player.rs  renderwindow.cpp
src/Animation/: Animation.cpp  Animation.h
src/Characters/: Character.h  Player.cpp  Player.h
src/Core/: Engine.cpp  Engine.h
src/Graphics/: TextureManager.cpp  TextureManager.h
src/Inputs/: Input.cpp  Input.h
src/Map/: GameMap.h  Layer.h  MapTools.cpp  MapTools.h  TileLayer.cpp  TileLayer.h
src/Object/: GameObject.h  IObject.h
src/Physics/: RigidBody.h  Transform.h  Vector2D.h
src/Timer/: Timer.cpp  Timer.h
src/core/: engine.rs  timer.rs
src/input/: input.rs
src/physics/: mod.rs
